<resources>
    <string name="app_name">Say the Word</string>
    <string name="detailsButton">Details</string>
    <string name="singleButton">Single Player</string>
    <string name="raceButton">Two Players</string>
    <string name="nameText">Say the Word Game</string>
    <string name="listenDesc">Let\'s hear it!</string>
    <string name="gamer2Text">Gamer 2</string>
    <string name="gamer1Text">Gamer 1</string>
    <string name="nicknameText">Nickname</string>
    <string name="pointsText">Points</string>
    <string name="dateText">Date</string>
    <string name="rankingText">Ranking</string>
    <string name="newButton">New word</string>
    <string name="saveButton">Save the Game</string>
    <string name="sendButton">Send</string>
    <string name="noConnTitle">No Internet connection</string>
    <string name="noConnDesc">You should connect to the Wi-Fi or to the </string>
    <string-array name="words">
        <!-- https://www.szeretlekmagyarorszag.hu/30-magyar-nyelvtoro-amibe-mi-is-belegabalyodtunk/ -->
        <item>kiskutyák</item>
        <item>kész az app</item>
        <item>működik e</item>
        <item>teszt</item>
        <item>haha</item>
        <item>Száz sasszem meg száz sasszem</item>
        <item>A paplak nappalijában pipál</item>
        <item>A pap és a pék két képet kap</item>
        <item>Jobb egy lúdnyak tíz tyúknyaknál</item>
        <item>Lenin mauzóleumának millenniumi lelinóleumozása</item>
        <item>Sohasem hallottam szebben szóló szép sípszót</item>
        <item>Csendes csiga csinosítgat kicsi csodás háza táján</item>
        <item>Jól járnak a molnárok mikor jó nyár jár rájok</item>
        <item>Öt török öt görögöt dögönyöz</item>
        <item>Az ibafai papnak fapipája van ezért az ibafai papi pipa papi fapipa</item>
        <item>A kövér kuvik a vak kivi kova kövére kíváncsi</item>
        <item>Fekete bikapata kopog a fekete pepita patika köveken</item>
    </string-array>
    <string-array name="languages">
        <item name="default"> </item>
        <item name="hu">Magyar</item>
        <item name="en">English</item>
        <item name="de">Deutsch</item>
    </string-array>
    <string name="detailsText" translatable="false">2018/19/2 Mobil alkalmazásfejlesztés kurzus projektfeladata.
        Feladatkiírás: A SpeechRecognisation implementálása. A strings.xml-ben egy string tömb tárolása, melynek egy random eleme megjelenik a képernyőn. Alatta megjelenik egy gomb, melyet megnyomva a felhasználónak ki kell mondania a szöveget, ha ez sikeres volt, a felirat kizöldül, a START gomb pedig egy NEW-ra változik, amelyre nyomva egy új szó jelenik meg vörösen a képernyőn.</string>
</resources>
