<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveTheGame">

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nicknameText"
        app:layout_constraintStart_toStartOf="@+id/save_text"
        app:layout_constraintTop_toBottomOf="@+id/save_text" />

    <TextView
        android:id="@+id/points_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pointsText"
        app:layout_constraintStart_toStartOf="@+id/name_textView"
        app:layout_constraintTop_toBottomOf="@+id/name_textView" />

    <TextView
        android:id="@+id/earnedPoints_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/points_textView"
        app:layout_constraintStart_toStartOf="@+id/name_editText" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dateText"
        app:layout_constraintStart_toStartOf="@+id/points_textView"
        app:layout_constraintTop_toBottomOf="@+id/points_textView" />

    <TextView
        android:id="@+id/today_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_textView"
        app:layout_constraintStart_toStartOf="@+id/earnedPoints_textView" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickSend"
        android:text="@string/sendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_textView" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/nicknameText"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/saveButton"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>